# session-trading

./: .env.example  .gitignore  docker-compose.yml
backend/: .env.example  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260317_01_create_market_catalog_tables.py  20260317_02_add_ticker_stream_tables.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/bootstrap/: __init__.py  exchanges.py
backend/app/core/: config.py
backend/app/db/: locks.py  session.py
backend/app/models/: __init__.py  app_setting.py  exchange.py  latest_market_ticker.py  market_listing.py  market_sync_run.py  market_sync_run_item.py  market_ticker_event.py
backend/app/repositories/: __init__.py  app_settings.py  exchanges.py  latest_market_tickers.py  market_data_streams.py  market_listings.py  (+3 more)
backend/tests/: test_admin_market_data_streams.py  test_admin_market_syncs.py  test_app_settings.py  test_binance_markets.py  test_binance_normalizers.py  test_binance_ticker_normalizers.py  test_binance_tickers.py  test_binance_websocket.py  test_bithumb_normalizers.py  test_bithumb_ticker_normalizers.py  test_bithumb_tickers.py  test_bithumb_websocket.py  test_bootstrap_exchanges.py  test_config.py  test_health.py  test_latest_market_tickers.py  test_market_catalog_sync.py  test_market_data_stream_service.py  test_market_data_streams_repository.py  test_market_queries.py  test_market_ticker_events.py  test_markets_api.py  test_settings_api.py  test_upbit_normalizers.py  test_upbit_ticker_normalizers.py  test_upbit_ticker_snapshots.py
(+150 files in other folders)
